@@ -1,7 +1,7 @@
 dnl
 dnl This file is part of the Score-P software (http://www.score-p.org)
 dnl
-dnl Copyright (c) 2022,
+dnl Copyright (c) 2022, 2024,
 dnl Forschungszentrum Juelich GmbH, Germany
 dnl
 dnl This software may be modified and distributed under the terms of
@@ -19,12 +19,12 @@ m4_define([_DEFAULTS_LIST], [ompt])
 
 # SCOREP_ENABLE_DEFAULT()
 # -----------------------
-# Switch defaults for experimental feautures. In case established
-# alternatives exist, experimetal features should not be
-# default. Although, switching defaults to experimatal features should
+# Switch defaults for experimental features. In case established
+# alternatives exist, experimental features should not be
+# default. Although, switching defaults to experimental features should
 # be possible for eager users or project partners.
 #
-# Set variable scorep_enable_default_<experimanetal_feature> from `no`
+# Set variable scorep_enable_default_<experimental_feature> from `no`
 # to `yes` if given in comma-separated list to
 # `--enable-default=`. Abort if `--enable-default` was given with
 # invalid value(s).
@@ -47,9 +47,14 @@ AC_ARG_ENABLE([default],
          [save_IFS=$IFS
           IFS=","
           for i in ${enableval}; do
-              AS_CASE([${enableval}],
-                  []_DEFAULTS_LIST[], [eval scorep_enable_default_${enableval}=yes],
-                  [AC_MSG_ERROR([One of the valid list elements (]_DEFAULTS_LIST[) to --enable-default expected, but got ${i}.])])
+              AS_CASE([${i}],
+                  []_DEFAULTS_LIST[], [eval scorep_enable_default_${i}=yes],
+                  [# We need to reset IFS here, since as_echo or the resulting printf seems to
+                   # use IFS for separating something, or ${i} gets an "," added during evaluation in as_echo.
+                   # Not resetting IFS will result in errors where the shell is trying to execute
+                   # non existing commands.
+                   IFS=$save_IFS
+                   AC_MSG_ERROR([One of the valid list elements (]_DEFAULTS_LIST[) to --enable-default expected, but got ${i}])])
           done
           IFS=$save_IFS
          ])
